[package]
name = "pandacare-chat-v2"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix-ws = "0.3.0"
dotenvy = "0.15.7"
env_logger = "0.11.8"
futures = "0.3.31"
jsonwebtoken = "9.3.1"
log = "0.4.27"
mongodb = "3.2.3"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["macros", "tokio-macros"] }
